cmake_minimum_required(VERSION 3.21)
project(AOC2021)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Day-1)
add_subdirectory(Day-2)
add_subdirectory(Day-3)
add_subdirectory(Day-4)
add_subdirectory(Day-5)
add_subdirectory(Day-6)
add_subdirectory(Day-7)
add_subdirectory(Day-8)
add_subdirectory(Day-9)
add_subdirectory(Day-10)
add_subdirectory(Day-11)
add_subdirectory(Day-12)
add_subdirectory(Day-13)
add_subdirectory(Day-14)